--- a/index.html
+++ b/index.html
@@ -4,21 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Site_Murilo</title>
 </head>
 <body>
-    
-    <header> <h1>Sou o cabeçaalho</h1> </header>
-    <h1> Oi sou Regiane </h1>
-    <h2> Oi eu sou o Joao</h2>
-    <br><br><br><br><br><br><br><br><br>
-    <div> <h1> Oi sou murilo</h1>  </div>
-
-    <br><br><br><br>
-    <footer> Aqui fica o rodape   
-        <br><br><br>
-
-    </footer>
+<h1>Olá sou o Murilo    </h1> 
+<img src="murilo.jpg" width="500"  >
+<br>
+<h3> Como ficou logo abaixo  </h3>
 </body>
 
 </html>
